- hashing done again in BE using argon2 - fixed register errors
