# API/entities/user.go
@@ -1,5 +1,9 @@
 package entities
 
+import (
+	"geo_report_api/utils"
+)
+
 type User struct {
 	ID        uint64 `gorm:"primary_key:auto_increment" json:"id"`
 	RoleID    uint64 `gorm:"int" json:"roleID"`
@@ -8,5 +12,12 @@ type User struct {
 	UserName  string `gorm:"uniqueIndex;type:varchar(255);not null" json:"username"`
 	Password  string `gorm:"not null" json:"password"`
 	Email     string `gorm:"uniqueIndex;type:varchar(255);not null" json:"email"`
-	Token     string `gorm:"-" json:"token"`
+}
+
+func Hash(password string) (string, error) {
+	return utils.CreateFromPassword(password)
+}
+
+func VerifyPassword(hashedPassword, password string) bool {
+	return utils.ComparePasswordAndHash(password, hashedPassword)
 }
